# Virtual_economy_service

./: .env.example  pyproject.toml
app/api/: main.py
app/repository/: config.py
app/repository/postgresql/: connect.py
app/repository/postgresql/base/: tables.py
app/service/: mediator.py
app/service/entities/: entity.py
app/service/exceptions/: postgre_exceptions.py
app/service/logic/: bd_tools.py
app/service/logic/base/: analytics.py  products.py  users.py
