[project]
name = "virtual-economy-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Cast1el_F",email = "Cast1el15F@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "psycopg (>=3.2.12,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
